[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thermolion"
version = "0.1.0"
description = "ThermoLion: a thermodynamic-enhanced Lion optimizer for PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Ahmed Nebli", email = "mr.ahmednebli@gmail.com"},
]
keywords = ["pytorch", "optimizer", "deep-learning", "lion", "thermodynamics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "torch>=1.10",
]

[project.urls]
"Homepage" = "https://github.com/ahmednebli/ThermoLion"
"Issues" = "https://github.com/ahmednebli/ThermoLion/issues"

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
